--- a/management-report/markdown/subpage-demographics.Rmd
+++ b/management-report/markdown/subpage-demographics.Rmd
@@ -149,6 +149,8 @@ ldp_all_age_2 <- left_join(ldp_all_age_2,
 ldp_all_age_2 %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, perc_met) %>% 
   rename(scot_perc_met = perc_met))
 
+ldp_all_age_2$age_grp_2<- factor(ldp_all_age_2$age_grp_2, levels = c("65+", "64 and Under"))
+
 pds_all_age_2 <- pds_all %>% filter(age_grp_2 != "Unknown") #remove 6 unknowns from 2016/17 (add note to charts and tables?)
 
 pds_all_age_2 %<>% group_by(fy, geog, age_grp_2) %>%
@@ -164,39 +166,13 @@ pds_all_age_2_cal_year <- pds_all_age_2 %>%
 pds_all_age_2_rates <- left_join(pds_all_age_2_cal_year, pop_data_age_2) %>% select(-year) %>%
   mutate(pop_rate_10000 = round((total_referrals/pop_est)*10000, 1)) %>% select(fy, geog, age_grp_2, pop_rate_10000)
 
-pds_all_age_2_rates$geog<- factor(pds_all_age_2_rates$geog, levels = unique(pds_all_age_2_rates$geog))
+pds_all_age_2_rates$geog<- factor(pds_all_age_2_rates$geog, levels = unique(pds_all_age_2_rates$geog)) 
+pds_all_age_2_rates$age_grp_2<- factor(pds_all_age_2_rates$age_grp_2, levels = c("65+", "64 and Under"))
 
 pds_all_age_2_rates %<>% complete(nesting(fy, geog), age_grp_2, fill = list(pop_rate_10000 = 0)) 
 
 pds_age_rates_2_data <- left_join(pds_all_age_2_rates,
 pds_all_age_2_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
-
-#prepare age data for SMALL AGE GROUPS
-pds_all_age <- pds_all %>% filter(age_grp != "Unknown") #remove 6 unknowns from 2016/17 (add note to charts and tables?)
-
-pds_all_age %<>% group_by(fy, geog, age_grp) %>%
-  summarise(total_referrals = sum(referrals), .groups = "drop")
-
-
-#prepare population rate data with small age groups
-pop_data_age <- pop_data %>% filter(sex == "All", age_grp_2 == "All") %>% select(-sex, -age_grp_2)
-
-pds_all_age_totals <- bind_rows(pds_all_age,
-pds_all_age %>% group_by(fy, geog, age_grp = "All") %>% summarise(total_referrals = sum(total_referrals), .groups = "drop"))
-
-pds_all_age_cal_year <- pds_all_age_totals %>%
-  mutate(year = as.numeric(substr(fy, 1, 4)))
-
-pds_all_age_rates <- left_join(pds_all_age_cal_year, pop_data_age) %>% select(-year) %>%
-  mutate(pop_rate_10000 = round((total_referrals/pop_est)*10000, 1)) %>% select(fy, geog, age_grp, pop_rate_10000)
-
-pds_all_age_rates$geog<- factor(pds_all_age_rates$geog, levels = unique(pds_all_age_rates$geog))
-
-pds_all_age_rates %<>% complete(nesting(fy, geog), age_grp, fill = list(pop_rate_10000 = 0)) 
-
-pds_age_rates_data <- left_join(pds_all_age_rates,
-pds_all_age_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
-
 
 #prepare gender data
 
@@ -239,60 +215,6 @@ pds_all_sex_rates <- left_join(pds_all_sex_rates,
 pds_all_sex_rates %>% filter(geog == "Scotland") %>% select(fy, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
 
 pds_all_sex_rates$sex<- factor(pds_all_sex_rates$sex, levels = c("Male", "Female"))
-
-
-# # with large age groups
-# ldp_all_sex_2 <- bind_rows(
-#   pds_all %>%
-#   filter(fy %in% full_years, sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>%
-#   group_by(geog, fy, sex, age_grp_2, ldp) %>% 
-#     summarise(total_referrals = sum(referrals), .groups = "drop"),
-#   pds_all %>%
-#   filter(fy %in% full_years, sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
-#   group_by(geog, fy, sex, age_grp_2 = "All", ldp) %>% 
-#     summarise(total_referrals = sum(referrals), .groups = "drop"))%>% 
-#   pivot_wider(names_from = ldp, values_from = total_referrals, values_fill = 0) %>% 
-#   mutate(perc_met = round((complete + exempt)/(complete + exempt + fail)*100,1)) %>% 
-# complete(nesting(geog, fy), sex, fill = list(perc_met = NA))
-# 
-# ldp_all_sex_2 <- left_join(ldp_all_sex_2,
-# ldp_all_sex_2 %>% filter(geog == "Scotland") %>% select(fy, sex, age_grp_2, perc_met) %>% 
-#   rename(scot_perc_met = perc_met)) %>% mutate(sex = substring(sex, 4))
-# 
-# ldp_all_sex_2$age_grp_2<- factor(ldp_all_sex_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-# ldp_all_sex_2$sex<- factor(ldp_all_sex_2$sex, levels = c("Male", "Female"))
-# 
-# 
-# pds_all_sex_2 <- bind_rows(
-#   pds_all %>% group_by(geog, fy, sex, age_grp_2) %>% filter(sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
-#   summarise(total_referrals = sum(referrals), .groups = "drop"),
-# pds_all %>% group_by(geog, fy, sex, age_grp_2 = "All") %>% filter(sex != "98 Not Specified", sex != "99 Not Known", sex != "Unknown", age_grp_2 != "Unknown") %>% 
-#   summarise(total_referrals = sum(referrals), .groups = "drop")) %>% 
-# complete(nesting(geog, fy), sex, age_grp_2, fill = list(total_referrals = 0)) %>% mutate(sex = substring(sex, 4))
-# 
-# 
-# pds_all_sex_2$age_grp_2<- factor(pds_all_sex_2$age_grp_2, levels = c("All", "65+", "64 and Under"))
-# pds_all_sex_2$sex<- factor(pds_all_sex_2$sex, levels = c("Male", "Female"))
-# 
-# 
-# #prepare population rate data for gender with large age groups
-# pop_data_sex_2 <- pop_data %>% filter(age_grp == "All", sex != "All") %>% select(-age_grp) %>% mutate(sex = substring(sex, 4))
-# 
-# pds_all_sex_2_cal_year <- pds_all_sex_2 %>% 
-#   mutate(year = as.numeric(substr(fy, 1, 4)))
-# 
-# pds_all_sex_2_rates <- left_join(pds_all_sex_2_cal_year, pop_data_sex_2) %>% select(-year) %>%
-#   mutate(pop_rate_10000 = round((total_referrals/pop_est)*10000, 1))
-# 
-# pds_all_sex_2_rates$geog <- factor(pds_all_sex_2_rates$geog, levels = unique(pds_all_sex_2_rates$geog))
-# pds_all_sex_2_rates$sex <- as.factor(pds_all_sex_2_rates$sex)
-# 
-# pds_all_sex_2_rates %<>% complete(nesting(geog, fy), age_grp_2, sex, fill = list(pop_est = NA, pop_rate_10000 = NA)) 
-# 
-# pds_all_sex_2_rates <- left_join(pds_all_sex_2_rates,
-# pds_all_sex_2_rates %>% filter(geog == "Scotland") %>% select(fy, age_grp_2, sex, pop_rate_10000) %>% rename(scot_pop_rate_10000 = pop_rate_10000))
-# 
-# pds_all_sex_2_rates$sex<- factor(pds_all_sex_2_rates$sex, levels = c("Male", "Female"))
 
 
 #prepare simd data
@@ -424,7 +346,7 @@ bscols(widths = c(1,5,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population (18+) by Age Group and Integration Authority Area</h2>
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by Age Group and Integration Authority Area</h2>
 ```{r plot-ijb-age-pop}
 
 bscols(widths = 12,
@@ -505,7 +427,7 @@ bscols(widths = c(1,5,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population (18+) by Age Group and Health Board</h2>
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 0px"> Number of people referred to PDS per 10,000 population by Age Group and Health Board</h2>
 ```{r plot-hb-age-pop}
 
 bscols(widths = 12,
@@ -574,7 +496,7 @@ bscols(widths = c(1,5,NA),
 
 ```
 
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px"> Number of people referred to PDS per 10,000 population (18+) by Age Group and Financial Year</h2> 
+<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 15px"> Number of people referred to PDS per 10,000 population by Age Group and Financial Year</h2> 
 ```{r plot-trend-age_2-legend-pop}
 
 bscols(widths = 12,
@@ -619,95 +541,6 @@ DT::datatable(trend_pop_age_2_table, rownames = FALSE,
      )
 
 
-
-```
-
-### **Granular Age Groups**
-
-```{r dropdown-pop-age}
-
-pds_age_pop_data <- SharedData$new(pds_age_rates_data %>% filter(geog != "Scotland") %>%
-                                     mutate(key = paste0(geog,fy), .before = geog),
-                                   key = ~key, group = "age_pop")
-
-data_filter_pop_year <- filter_select(id = "filter_pop_age_year",
-                                    label = "Select Financial Year:",
-                                    group = ~fy,
-                                    sharedData = pds_age_pop_data,
-                                    multiple = FALSE
-                                   )
-
-
-data_filter_pop_hb_ijb <- filter_select(id = "filter_pop_age_hb_ijb",
-                                    label = "Select Integration Authority Area or Health Board:",
-                                    group = ~geog,
-                                    sharedData = pds_age_pop_data,
-                                    multiple = FALSE
- 
-                                                                      )
-bscols(widths = c(1,5,5,NA),
-       NULL,
-       data_filter_pop_year,
-       data_filter_pop_hb_ijb,
-       NULL)
-
-
-```
-
-<h2 style="margin-left: 70px; margin-top: 0px; margin-bottom: 10px"> People referred to PDS per 10,000 population (18+) by Age Group</h2>
-```{r plot-pop-age-legend}
-
-age_pop_legend_data <- tibble(
-  geog = c("Selected Health Board/Integration Authority Area", "Scotland"),
-  y = c(0,0))
-
-age_pop_legend_data$geog <- factor(age_pop_legend_data$geog, levels = unique(age_pop_legend_data$geog))
-
-
-bscols(widths = 12,
-div(style=css(marginBottom="0px",height="23px"), plot_bar_age_pop_legend(age_pop_legend_data)),NULL
-)
-```
-
-```{r plot-pop-age}
-
-bscols(widths = 12,
-       div(style = css(width="98%", height="380px"),
-plot_bar_age_pop(pds_age_pop_data))
-)
-
-```
-
-```{r table-pop-age}
-
-pds_age_rates_table_data <- bind_rows(
-  pds_age_rates_data %>% mutate(geog_2 = geog, .after = geog) %>%
-  select(-scot_pop_rate_10000) %>%
-  pivot_wider(names_from = age_grp, values_from = pop_rate_10000, values_fill = 0),
-  pds_age_rates_data %>% mutate(geog_2 = "Scotland", .after = geog) %>%
-  select(-pop_rate_10000) %>%
-  pivot_wider(names_from = age_grp, values_from = scot_pop_rate_10000)) %>%
-   filter(geog != "Scotland") %>%
-    mutate(key = paste0(geog,fy), .before =fy)
-
-pds_age_rates_table <- SharedData$new(pds_age_rates_table_data %>% rename(" " = geog_2),
-                                     key = ~key, group = "age_pop")
-
-
-bscols(widths = 12,
-        div(style = css(width="98%", height="140px", margin="15px", marginTop="-10px"),
-DT::datatable(pds_age_rates_table, rownames = FALSE,
-              options = list(pageLength = 2,
-                             scrollX = FALSE,
-                             scrollY = TRUE,
-                             dom = "t",
-                             ordering = FALSE,
-                             columnDefs = list(list(visible = FALSE, targets = 0:2))
-                             )
-              )%>% 
-          DT::formatStyle(1, fontWeight = "bold")
-            )
-       )
 
 ```
 
@@ -808,7 +641,7 @@ ijb_age_totals_data <- pds_all_age_2 %>% filter(!grepl("NHS", geog)) %>%
 
 
 ijb_ldp_age_table_data <- bind_rows(ijb_age_totals_data, ijb_age_ldp_data) %>% 
-  arrange(fy, `Age Group`) %>% 
+  arrange(fy, desc(`Age Group`)) %>% 
   mutate(`Age Group` = if_else(type == "% Met Standard/Exempt", " ", `Age Group`)) %>% 
  rename(" " = "type")
 
@@ -896,9 +729,10 @@ hb_age_totals_data <- pds_all_age_2 %>% filter(geog == "Scotland" | grepl("NHS",
 
 
 hb_ldp_age_table_data <- bind_rows(hb_age_totals_data, hb_age_ldp_data) %>% 
-  arrange(fy, `Age Group`) %>% 
+  arrange(fy, desc(`Age Group`)) %>% 
   mutate(`Age Group` = if_else(type == "% Met Standard/Exempt", " ", `Age Group`)) %>% 
  rename(" " = "type")
+
 
 hb_age_table_ldp <- SharedData$new(hb_ldp_age_table_data, key = ~fy,  group = "hb_age_ldp")
 
@@ -976,11 +810,12 @@ trend_age_2_totals <- pds_all_age_2 %>% filter(fy %in% full_years, total_referra
     mutate(type = "Number of Referrals", .before = `2016/17`)
 
 
-ldp_age_2_table_data <- bind_rows(trend_age_2_totals, ldp_age_2_trend) %>% arrange(geog, age_grp_2) %>% 
+ldp_age_2_table_data <- bind_rows(trend_age_2_totals, ldp_age_2_trend) %>% arrange(geog, desc(age_grp_2)) %>% 
             mutate(across(everything(), ~replace_na(.x, "-"))) %>% 
   mutate(age_grp_2 = if_else(type == "% Met Standard/Exempt", " ", age_grp_2)) %>% 
    rename(`Age Group` = age_grp_2) %>% 
   rename(" " = "type")
+
             
 
 ldp_age_2_table <- SharedData$new(ldp_age_2_table_data, key = ~geog, group = "ldp_age_2")
@@ -2452,19 +2287,7 @@ function filter_default() {
 
   document.getElementById("filter_trend_age_2_pop").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
-  
-  document.getElementById("filter_pop_age_year").getElementsByClassName("selectized") 
-  [0].selectize.setValue("2023/24", false);
 
-  document.getElementById("filter_pop_age_year").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
-  document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized") 
-  [0].selectize.setValue("Aberdeen City", false);
-
-  document.getElementById("filter_pop_age_hb_ijb").getElementsByClassName("selectized")
-  [0].selectize.removeOption("");
-  
   document.getElementById("filter_ijb_age_ldp").getElementsByClassName("selectized") 
   [0].selectize.setValue("2023/24", false);
 
@@ -2532,7 +2355,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("All", false);
+  [0].selectize.setValue("1 - Most Deprived", false);
 
   document.getElementById("filter_hb_simd_pop_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2544,7 +2367,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("All", false);
+  [0].selectize.setValue("1 - Most Deprived", false);
 
   document.getElementById("filter_ijb_simd_pop_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2562,7 +2385,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("All", false);
+  [0].selectize.setValue("1 - Most Deprived", false);
 
   document.getElementById("filter_hb_simd_ldp_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
@@ -2574,7 +2397,7 @@ function filter_default() {
   [0].selectize.removeOption("");
   
   document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized") 
-  [0].selectize.setValue("All", false);
+  [0].selectize.setValue("1 - Most Deprived", false);
 
   document.getElementById("filter_ijb_simd_ldp_quintile").getElementsByClassName("selectized")
   [0].selectize.removeOption("");
